# Trabalho-Grafos

./: .gitignore  CMakeLists.txt  README.md  library.h  main.cpp
include/structures/graph/: Grafo.h  Grafo_lista.h  Grafo_matriz.h
include/structures/graph/basics/: Edge.h  Node.h
include/structures/storage/: Storage.h
include/structures/storage/list/: List.h
include/structures/storage/matrices/: Matrix.h  MatrixLin.h
input/: descricao.txt  grafo.txt
output/: descricao.txt  grafo.txt
src/structures/: Edge.cpp  Edge.h  Grafo.h  Node.cpp  Node.h
src/structures/graph/: Edge.h  Grafo.cpp  Grafo.h  Grafo_lista.cpp  Grafo_lista.h  Grafo_matriz.cpp  Grafo_matriz.h  Node.h
src/structures/graph/basics/: Edge.h  Node.cpp  Node.h
src/structures/storage/: Storage.h
src/structures/storage/List/: List.cpp  ListNode.h  ListStorage.cpp  ListStorage.h
src/structures/storage/Matrices/: Matrix.cpp  Matrix.h  MatrixLin.cpp  MatrixLin.h
